refactor : StringUtils 적용